@@ -144,6 +144,10 @@ Core and Builtins
 Library
 -------
 
+- Removed isSequenceType(), isMappingType, and isNumberType() from the
+  operator module; use the abstract base classes instead.  Also removed
+  the repeat() function; use mul() instead.
+
 - Issue #4863: distutils.mwerkscompiler has been removed.
 
 - Fix and properly document the multiprocessing module's logging
